Fixing post-full-content padding on small screen

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -829,7 +829,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     }
     .post-full-content {
         font-size: 1.6rem;
-        padding: 1vw 5vw 3vw;
+        padding: 4vw 6vw 3vw;
     }
 }
 
